add the h1 tag to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
 <title> This is our website</title>
-<p> I love you</p>
+<h1> Indian Premier league</h1>
+<p> I love csk and msd</p>
 </html>
