Added +s to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <title> This is our website</title>
-<h1> *Indian Premier league*</h1>
+<h1> ++*Indian Premier league*++</h1>
 <p> I love csk and msd</p>
 </html>
